syntax = "proto3";

package service.user;

message Envelope {
    uint64 EnvelopeId = 1;
    bool Opened = 2;
    uint64 Value = 3;
    int64 SnatchTime = 4;
}

// ---

enum ErrorType {
    NoError = 0;
    EnvelopeAlreadyOpen = 1;
    WrongEnvelopeOwner = 2;
    EnvelopeNotFound = 3;
    UserNotFound = 4;

    TxFailed = 5;
    Internal = 100;
}

message SnatchEnevelopeReq { uint64 UserId = 1; }
message SnatchEnevelopeReply {
    ErrorType ErrorType = 1;
    uint64 EnvelopeId = 2;
    uint64 EnvelopesCount = 3;
}

message OpenEnvelopeReq {
    uint64 UserId = 1;
    uint64 EnvelopeId = 2;
}
message OpenEnvelopeReply {
    ErrorType ErrorType = 1;
    uint64 Value = 2;
}

message ListEnvelopesReq { uint64 UserId = 1; }
message ListEnvelopesReply {
    ErrorType ErrorType = 1;
    repeated Envelope Envelopes = 2;
}

service User {
    rpc SnatchEnevelope(SnatchEnevelopeReq) returns (SnatchEnevelopeReply);

    rpc OpenEnvelope(OpenEnvelopeReq) returns (OpenEnvelopeReply);

    rpc ListEnvelopes(ListEnvelopesReq) returns (ListEnvelopesReply);
}